--- a/Web.Release.config
+++ b/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+
+    <add key="demokeyvalue" value="this is demo text from local appsettings release"/>
+  </appSettings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
