--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <appSettings>
+
+    <add key="demokeyvalue" value="this is demo text from local appsettings debug"/>
+  </appSettings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
