--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ on:
            - Release
 
 env:
-  AZURE_WEBAPP_NAME: SimpleFrameworkApp.sln     # set this to your application's name
+  AZURE_WEBAPP_NAME: netframeworkgabo    # set this to your application's name
+  AZURE_SOLUTION_NAME: SimpleFrameworkApp.sln  
   AZURE_WEBAPP_PACKAGE_PATH: 'published'      # set this to the path to your web app project, defaults to the repository root
-
+  RESOURCE_GROUP: webapp
+  AZURE_SUBSCRIPTION_ID: 830cf174-325e-47f4-adbf-96381bee6ba0
 jobs:
   build:
     name: Build and deploy
@@ -29,13 +31,13 @@ jobs:
       uses: NuGet/setup-nuget@v1.0.5
     
     - name: Restore NuGet packages
-      run: nuget restore ${{ env.AZURE_WEBAPP_NAME }}
+      run: nuget restore ${{ env.AZURE_SOLUTION_NAME }}
 
     - name: Build
-      run: msbuild ${{ env.AZURE_WEBAPP_NAME }} /p:Configuration=Release
+      run: msbuild ${{ env.AZURE_SOLUTION_NAME }} /p:Configuration=Release
 
     - name: Publish to folder
-      run: msbuild ${{ env.AZURE_WEBAPP_NAME }} /p:Configuration=Release /p:EnvironmentName=${{ inputs.Environment }} /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.AZURE_WEBAPP_PACKAGE_PATH }} /p:PackageAsSingleFile=false
+      run: msbuild ${{ env.AZURE_SOLUTION_NAME }} /p:Configuration=Release /p:EnvironmentName=${{ inputs.Environment }} /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.AZURE_WEBAPP_PACKAGE_PATH }} /p:PackageAsSingleFile=false
 
     - name: Retrieve publish profile for deployment
       id: publishProfileRetrieval
