--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         publishProfiles=$(az webapp deployment list-publishing-profiles \
           --name ${{ env.AZURE_WEBAPP_NAME }} \
           --resource-group "${{ env.RESOURCE_GROUP }}" \
-          --subscription ${{ vars.AZURE_SUBSCRIPTION_ID }} --xml)
+          --subscription ${{ env.AZURE_SUBSCRIPTION_ID }} --xml)
         echo "::add-mask::$publishProfiles"
         echo "::set-output name=publishProfiles::$publishProfiles"
 
