--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -14,10 +14,8 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-
   <appSettings>
-
-    <add key="demokeyvalue" value="this is demo text from local appsettings debug"/>
+    <add key="demokeyvalue" value="this is demo text from local appsettings debug"  xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
   
   <system.web>
