--- a/Web.Release.config
+++ b/Web.Release.config
@@ -15,8 +15,7 @@
     </connectionStrings>
   -->
   <appSettings>
-
-    <add key="demokeyvalue" value="this is demo text from local appsettings release"/>
+    <add key="demokeyvalue" value="this is demo text from local appsettings release"  xdt:Transform="Replace" xdt:Locator="Match(key)" />
   </appSettings>
 
   <system.web>
